# stock-agent

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_ANALYSIS.md  SP500_Forward_PE_Research_Paper.md  create_test_image.py  pyproject.toml  readme.md  test_chart.py  test_full_report.py  test_notion.py  test_notion_api_comparison.py  test_r2_upload.py
.cursor/rules/: coding-rule.mdc
.github/workflows/: weekly-report.yml
data/: aaii_bull_bear_spread_history.json  aaii_sentiment_history.json  margin_debt_history.json  market_breadth_history.json  put_call_ratio_history.json
doc/pe_research/: SP500_Forward_PE_Research_Paper.md  SP500_Forward_PE_연구논문.md  extracted_estimates.csv  factset_pdfs_index.json  pe_comparison_from_extracted_estimates.csv
doc/pe_research/codes/: analyze_pe_flexible.py  annualized_comparison_all.py  calculate_actual_returns.py  calculate_pe_mdd_match_rate.py  calculate_pe_win_probability.py  calculate_probabilities.py  compare_all_pe_quartiles.py  compare_pe_definitions.py  create_operating_vs_reported_chart.py  pe_quartile_analysis.py  trailing_pe_test.py  visualize_pe_correlations.py  visualize_pe_mdd_alignment.py  visualize_pe_mean_reversion_daily.py
scripts/: __init__.py  generate_indicator_heatmap.py  update_readme.py  update_readme_test.py
src/: __init__.py  config.py  readme.md  run_market_report.py
src/adapters/: __init__.py  markdown_to_notion.py  markdown_to_notion_test.py  notion_api.py  notion_api_test.py  notion_integration_test.py  notion_report_builder.py  report_builder.py  report_builder_test.py
src/agent/: agent.py  async_agent.py  email_agent.py  equity_agent.py  file_agent.py  liquidity_agent.py  market_analysis_agent.py  notion_agent.py  notion_template_agent.py  trend_agent.py  trend_research_base.py
src/data_sources/: __init__.py  base.py
src/dep/: agent.py  market_agent.py  report_builder.py
src/services/: __init__.py  image_service.py  image_service_test.py  score_service.py  score_service_test.py
src/types/: __init__.py  analysis_report.py
src/utils/: charts.py  charts_test.py  cloudflare.py  csv_storage.py  data_sources.py  data_sources_test.py  indicator_heatmap.py  koyfin_chart_capture.py  koyfin_parallel.py  technical_indicators.py
tests/: __init__.py  test_notion_api.py  test_notion_integration.py
(+38 files in other folders)
